# rust-on-lambda

./: .gitignore  Presentation.md  README.md
minimal-rs/: Cargo.toml  package.json  pnpm-lock.yaml  rust_lambda_helpers.zsh  serverless.yaml
minimal-rs/src/: main.rs
minimal-ts/: package.json  pnpm-lock.yaml  serverless.yaml
minimal-ts/src/: handler.ts
