[package]
name = "minimal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.2"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.107"

# [profile.release]
# opt-level = 'z'
# lto = true
# codegen-units = 1
# panic = 'abort'
